[project]
name = "toolbox-libs"
version = "0.1.0"
description = "Core domain logic for jetson-toolbox (bench, inspect, eval, datasets, viz)"
requires-python = ">=3.11"
dependencies = [
  "onnx>=1.16",
  "onnxruntime>=1.18",
  "numpy>=1.26",
  "pydantic>=2.9",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"